// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/metadata-instance-editor/fields/CustomField should correctly render a custom field is last 1`] = `
<div
  className="bdl-CustomField"
>
  <Field
    dataValue="value"
    onRemove={[Function]}
    type="string"
  />
</div>
`;

exports[`features/metadata-instance-editor/fields/CustomField should correctly render a custom field when editable 1`] = `
<div
  className="bdl-CustomField"
>
  <Field
    canEdit={true}
    dataValue="value"
    onRemove={[Function]}
    type="string"
  />
  <div
    className="bdl-CustomField-customActions"
  >
    <Button
      className=""
      data-resin-target="metadata-customfieldremove"
      isLoading={false}
      onClick={[Function]}
      showRadar={false}
      type="button"
    >
      <IconMinusThin
        color="#999"
      />
    </Button>
  </div>
</div>
`;

exports[`features/metadata-instance-editor/fields/CustomField should correctly render a custom field when not editable 1`] = `
<div
  className="bdl-CustomField"
>
  <Field
    dataValue="value"
    onRemove={[Function]}
    type="string"
  />
</div>
`;
